--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^5.4.3"
+    "@types/node": "^18.16.3",
+    "lerna": "^5.4.3",
+    "typescript": "^5.0.4"
   }
 }
