[dev] INIT react in web ext libraries

--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
   ],
   "devDependencies": {
     "@types/node": "^18.16.3",
+    "@types/react-dom": "^18.2.3",
     "chrome-types": "^0.1.191",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.1",
     "lerna": "^5.4.3",
-    "typescript": "^5.0.4"
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.0.2"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
