--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.16.3",
     "@types/react-dom": "^18.2.3",
     "chrome-types": "^0.1.191",
+    "concurrently": "^8.0.1",
     "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.1",
     "lerna": "^5.4.3",
+    "nodemon": "^2.0.22",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
