--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,7 @@
   "main": "lib/index.js",
   "directories": {
     "lib": "lib",
-    "test": "__tests__"
+    "test": "tests"
   },
   "files": [
     "lib"
@@ -18,8 +18,10 @@
     "url": "git+https://github.com/houzyk/mauritius-media-search-monorepo.git"
   },
   "scripts": {
-    "test": "node ./__tests__/index.test.ts",
-    "compile": "tsc"
+    "test": "node ./tests/index.test.ts",
+    "compile": "tsc",
+    "start": "node lib/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q lib/index.js\""
   },
   "bugs": {
     "url": "https://github.com/houzyk/mauritius-media-search-monorepo/issues"
