--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,7 +22,7 @@
     "compile": "tsc",
     "start": "node lib/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q lib/index.js\"",
-    "build": "tsc && node lib/index.js"
+    "build-api": "tsc && node lib/index.js"
   },
   "bugs": {
     "url": "https://github.com/houzyk/mauritius-media-search-monorepo/issues"
